--- a/gefcdbio.html
+++ b/gefcdbio.html
@@ -1,46 +1,65 @@
-<HTML>
-<title>Ellen Foley Information - CD Biography in German</title>
-<BODY BGCOLOR=#E0E0FF>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley, Biographie, Musik, CD, The Very Best Of">
+    <meta name="keywords" content="Ellen Foley, Musik, Biographie, CD, The Very Best Of">
+    <meta name="author" content="Foley Matthews">
+    <title>Ellen Foley - Biographie und CDs</title>
+    <style>
+        body {
+            background-color: #E0E0FF;
+            font-family: Arial, sans-serif;
+	    line-height: 1.5;  /* Ensures consistent line-height across all text */
+        }
+        h1 {
+            color: #333;
+	    font-size: 16px;  /* Heading 1 will have a font size of 16px */
+	    font-weight: normal;  /* Removes the boldness */
+	    margin-top: 32px;  /* Space above the heading */
+            margin-bottom: 32px;  /* Space below the heading */
+        }
+	h2 {
+            font-size: 16px;  /* Heading 2 will have a font size of 16px */
+	    margin-top: 16px;  /* Space above the heading */
+            margin-bottom: 16px;  /* Space below the heading */
+    }
+        p {
+            font-size: 16px;
+            line-height: 1.2;
+        }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
 
-<P><BR>
-Ellen Foley CD "The Very Best Of" mit ausf¸hrlicher biographie.<P>
-<BR>
+<main>
+    <h1>Ellen Foley CD "The Very Best Of" mit ausf√ºhrlicher Biographie</h1>
 
-<B>Biographie Ellen Foley.</B><P>
+    <section>
+        <h2>Biographie von Ellen Foley</h2>
+<p>Die aus St. Louis stammende Ellen Foley hatts sich jahrelang als Back-ground-S√§ngerin in den New Yorker Tonstudio-Tempeln durchge-schlagen, bevor Jim Steinman sie 1977 f√ºr Meat Loafs LP-Erstling "Bat out of Hell" als Duettparnerin des schwergewichtigen Stimmband-Akrobaten aussuchte. Der Wechselgesang auf dem St√ºck "Paradise by the Dashboard Light" machte die zarte S√§ngerin mit einem Schlag weltbekannt. Der "Rolling Stone" lobte ihr Timbre mit dem Satz "Sie ist in diesem Jahr gewi√ü die vielversprechendste Stimme des Rock". Mit ihrem Deb√ºt-Album "Nightout" gab sie der Pop-Gazette mit gewaltiger Stimme Recht. Das 1979 erschienene Werk brachte ihr die Hits "What's a Matter Baby" und "We Belong to the Night" - doch auch die √ºbrigen Titel zeugten vom musikalischen Geschmack der blonden Lady: Kompositionen von Jagger/Richards ("Stupid Girl") und Graham Parker ("Thunder and Rain") rundeten die von Ian Hunter und Mick Ronson produzierte Langrille zu einem Beachtlichen Meisterwerk.
+</p>
+<p>Ellen Foley zweites Album trug den Titel "Spirit of St.Louis" (1981) und geriet zwar deutlich ruhiger als der rockige Vorg√§nger,doch ihre Fans akzeptierten gerne diesen Wandel. Das is enger Zusam-menarbeit mit den Clash-Mitgliedern Joe Strummer und Mick Jones eingespielte Werk stellte mit "Torchlight", "The Shuttered Palace", "Theatre of Cruelty" und "How Glad I Am" <I>(editors note:- "How Glad I Am" is not a Strummer/Jones composition however.)</I> bemerkenswerte Bei-speile f√ºr die musikalische Vielfalt der S√§ngerin vor. Die britische Zeitschrift "New Musical Express" wertete das gesamte Album als "ein St√ºck zeitgen√∂ssischer Musikkultur, dessen Bestimmung gewi√ü nicht allein die Charts sein sollen. Hinh√∂ren ist hier gefragt - und genie√üen."
+</p>
+<p>Als Ellen Foley 1983 ihre dritte Langspeilplatte ver√∂ffentlichte, gab sie erneut Anla√ü zum Staunen - Produzent hatte sie den von seiner erfolgreichen Zusammenarbeit mit Leo Sayer und Ringo Starr bekannten Vini Poncia gewinnen k√∂nnen. Der versierte Mischpult-Experte entdeckte in der Stimme von Ellen Foley Feinheiten, die seinen Vorg√§ngern wohl bisher entgangen waren: Spektakul√§re Interpretationen von Songs wie "Johnny and Mary" (Robert Palmer), "Come and Get These Memories" (Holland / Dozier / Holland) und "Let Me Be the One You Love" (von Kult-Composer-Team Desmond Child und David Landau) brachten ihr wieder bests Kritiken in allen gro√üen Musikzeitschriften. "Music Week" schrieb voller Begeiste-rung: "Wer h√§tte gedacht, da√ü Robert Palmer √ºber diese Cover-Version seines Hits so begeistert ist? Und das ganze Album ist auf dem Punkt: sparsame Arrangements, gute Songs und allen voran diese Stimme, die keine Sekunde langweilt."
+</p>
+</section>
 
-Die aus St. Louis stammende Ellen Foley hatts sich jahrelang als Back-ground-S‰ngerin in den New Yorker Tonstudio-Tempeln durchge-schlagen, bevor Jim 
-Steinman sie 1977 f¸r Meat Loafs LP-Erstling "Bat out of Hell" als Duettparnerin des schwergewichtigen Stimmband-Akrobaten aussuchte. Der Wechselgesang auf 
-dem St¸ck "Paradise by the Dashboard Light" machte die zarte S‰ngerin mit einem Schlag weltbekannt. Der "Rolling Stone" lobte ihr Timbre mit dem Satz "Sie 
-ist in diesem Jahn gewiﬂ die vielversprechendste Stimme des Rock". Mit ihrem Deb¸t-Album "Nightout" gab sie der Pop-Gazette mit gewaltiger Stimme Recht. Das 
-1979 erschienene Werk brachte ihr die Hits "What's a Matter Baby" und "We Belong to the Night" - doch auch die ¸brigen Titel zeugten vom musikalischen 
-Geschmack der blonden Lady: Kompositionen von agger/Richards ("Stupid Girl") und Graham Parker ("Thunder and Rain") rundeten die von Ian Hunter und Mick 
-Ronson produzierte Langrille zu einem Beachtlichen Meisterwerk.<P>
+    <footer>
+        <p>Any <a href="feedback.html" title="Give feedback">feedback</a> to <strong>Me</strong>.</p>
+        <p>Go back to the start of <a href="index2.html" title="Return to the main page">Ellen Foley Information</a>.</p>
+        <p><i>&copy; Web page Copyright Foley U. Matthews 2005</i></p>
+    </footer>
+</main>
 
-Ellen Foley zweites Album trug den Titel "Spirit of St.Louis" (1981) und geriet zwar deutlich ruhiger als der rockige Vorg‰nger,doch ihre Fans akzeptierten 
-gerne diesen Wandel. Das is enger Zusam-menarbeit mit den Clash-Mitgliedern Joe Strummer und Mick Jones eingespielte Werk stellte mit "Torchlight", "The 
-Shuttered Palace", "Theatre of Cruelty" und "How Glad I Am" <I>(editors note:- "How Glad I Am" is not a Strummer/Jones composition however.)</I> 
-bemerkenswerte Bei-speile f¸r die musikalische Vielfalt der S‰ngerin vor. Die britische Zeitschrift "New Musical Express" wertete das gesamte Album als 
-"ein St¸ck zeitgenˆssischer Musikkultur, dessen Bestimmung gewiﬂ nicht allein die Charts sein sollen. Hinhˆren ist hier gefragt - und genieﬂen."<P>
-
-Als Ellen Foley 1983 ihre dritte Langspeilplatte verˆffentlichte, gab sie erneut Anlaﬂ zum Staunen - Produzent hatte sie den von seiner erfolgreichen 
-Zusammenarbeit mit Leo Sayer und Ringo Starr bekannten Vini Poncia gewinnen kˆnnen. Der versierte Mischpult-Experte entdeckte in der Stimme von Ellen Foley 
-Feinheiten, die seinen Vorg‰ngern wohl bisher entgangen waren: Spektakul‰re Interpretationen von Songs wie "Johnny and Mary" (Robert Palmer), "Come and Get 
-These Memories" (Holland / Dozier / Holland) und "Let Me Be the One You Love" (von Kult-Composer-Team Desmond Child und David Landau) brachten ihr wieder 
-bests Kritiken in allen groﬂen Musikzeitschriften. "Music Week" schrieb voller Begeiste-rung: "Wer h‰tte gedacht, daﬂ Robert Palmer ¸ber diese Cover-Version 
-seines Hits so begeistert ist? Und das ganze Album ist auf dem Punkt: sparsame Arrangements, gute Songs und allen voran diese Stimme, die keine Sekunde 
-langweilt."<P>
-
-Any <A HREF="feedback.html">feedback</A> to <B>Me.</B><br>
-Go back to the start of <a href="index2.html">Ellen Foley Information.</a>
-
-</BODY>
-</HTML>
-
-
-
-
-
-
-
-
+</body>
+</html>
 
