--- a/myworks/myenvironmentnew.html
+++ b/myworks/myenvironmentnew.html
@@ -57,7 +57,7 @@
     </div>
 
     <!-- Including the JavaScript file that will dynamically load the data -->
-    <script src="environmentscript.js"></script>
+    <script src="environmentscriptnew.js"></script>
 
 </body>
 
