--- a/myworks/myenvironmentnew.html
+++ b/myworks/myenvironmentnew.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
     <meta name="author" content="Foley Matthews">
     <title>Foley Matthews Information - "My Rainfall." Data | Sustainability in Ipswich, Queensland, Australia</title>
-    <link rel="stylesheet" href="stylesnew.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
         </ul>
     </div>
 
-    <div id="year-info">
+    <div id="instructions">
         <h2>Select a year to see the information.</h2>
     </div>
 
