--- a/myworks/myenvironmentnew.html
+++ b/myworks/myenvironmentnew.html
@@ -52,7 +52,7 @@
         </ul>
     </div>
 
-    <div id="instructions">
+    <div id="year-info">
         <h2>Select a year to see the information.</h2>
     </div>
 
