update to files using json for dynamic html

--- a/myworks/myenvironment.html
+++ b/myworks/myenvironment.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
     <meta name="author" content="Foley Matthews">
     <title>Foley Matthews Information - "My Rainfall." Data | Sustainability in Ipswich, Queensland, Australia</title>
-    <link rel="stylesheet" href="stylesnew.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
     </div>
 
     <!-- Including the JavaScript file that will dynamically load the data -->
-    <script src="environmentscriptnew.js"></script>
+    <script src="environmentscript.js"></script>
 
 </body>
 
