update html compliance

--- a/efbiog.html
+++ b/efbiog.html
@@ -1,6 +1,14 @@
-<HTML>
+<!DOCTYPE html>
+<html lang="en">
 
-<TITLE>Ellen Foley Information - Biography (interim)</TITLE>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Biography of Ellen Foley, highlighting her contributions to music, theater, and television.">
+    <meta name="keywords" content="Ellen Foley, biography, music, theater, Meat Loaf, Bat Out of Hell, Nightout">
+    <meta name="author" content="Sven Gusevik">
+    <title>Ellen Foley Information - Biography (interim)</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <CENTER><H1>Ellen Foley Biography.</H1><P>
 by  <B>Sven Gusevik.</B><BR>
