--- a/efcdbio.html
+++ b/efcdbio.html
@@ -1,5 +1,13 @@
-<HTML>
-<title>Ellen Foley Information - CD Biography in English</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Full biography of Ellen Foley, including details about her music career and her contributions to the album 'The Very Best Of.'">
+    <meta name="keywords" content="Ellen Foley, biography, music, The Very Best Of, Jim Steinman, Meat Loaf, album">
+    <meta name="author" content="Foley Matthews">
+    <title>Ellen Foley Information - CD Biography in English</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 
 
