--- a/efpic.html
+++ b/efpic.html
@@ -1,5 +1,15 @@
-<HTML>
-<TITLE>Ellen Foley Information - Pictures</TITLE>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Explore the collection of Ellen Foley pictures, including album photos, movie stills from films like 'Married to the Mob', 'Cocktail', and more.">
+    <meta name="keywords" content="Ellen Foley, pictures, photos, album, movie stills, Married to the Mob, Cocktail, Fatal Attraction, Tootsie, Hair, King of Comedy">
+    
+    <title>Ellen Foley Information - Pictures</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <CENTER><H1>Ellen Foley pictures</H1> <P>
 Click on each pic to load a larger version.<P>
