--- a/biointro.html
+++ b/biointro.html
@@ -1,5 +1,13 @@
-<HTML>
-<title>Ellen Foley Information - Biographies</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore biographical information about Ellen Foley, including her biography written by Sven Gusevik and information from the CD 'The Very Best Of' in English and German.">
+    <meta name="keywords" content="Ellen Foley, biography, music, The Very Best Of, Sven Gusevik">
+    <meta name="author" content="Foley Matthews">
+    <title>Ellen Foley Information - Biographies</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>Ellen Foley Biographical Information.</h1><p>
 
