update html compliance

--- a/efctl.html
+++ b/efctl.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - Cocktail</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley's role in the 1988 film 'Cocktail' starring Tom Cruise.">
+    <meta name="keywords" content="Ellen Foley, Cocktail, Tom Cruise, Bryan Brown, Eleanor">
+    <title>Ellen Foley Information - Cocktail</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>The Film "Cocktail" as described by an Ellen Foley Fan.</h1>
 </center>
