--- a/effa.html
+++ b/effa.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - Fatal Attraction</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley's role in 'Fatal Attraction' and her appearance in the film.">
+    <meta name="keywords" content="Ellen Foley, Fatal Attraction, Michael Douglas, Glenn Close, Hildy">
+    <title>Ellen Foley Information - Fatal Attraction</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>"Fatal Attraction", featuring Ellen Foley...</h1>
 oh! and Michael Douglas and Glenn Close.
