--- a/efhair.html
+++ b/efhair.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - Hair</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley's role in the film version of the musical 'Hair'.">
+    <meta name="keywords" content="Ellen Foley, Hair, musical, John Savage, Treat Williams">
+    <title>Ellen Foley Information - Hair</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>The Film version of the musical "Hair", starring Ellen Foley,</h1>
 and a whole lotta other people.
