--- a/efkoc.html
+++ b/efkoc.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - King of Comedy</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley's role in 'The King of Comedy' and her connection to the film.">
+    <meta name="keywords" content="Ellen Foley, King of Comedy, Robert De Niro, Jerry Lewis, Street Scum, The Clash">
+    <title>Ellen Foley Information - King of Comedy</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>The Film ,"The King of Comedy".<br>
 Someone told me it's got Ellen Foley in it,<br></h1>
