--- a/efmtm.html
+++ b/efmtm.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - Married to the Mob</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley's role in the 1988 film 'Married to the Mob' starring Michelle Pfeiffer, Alec Baldwin, and others.">
+    <meta name="keywords" content="Ellen Foley, Married to the Mob, Michelle Pfeiffer, Alec Baldwin, gangster, comedy">
+    <title>Ellen Foley Information - Married to the Mob</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>"Married to the Mob",<br>Starring Ellen Foley, Michelle Pfeiffer, Dean Stockwell, Mathew Modine, Mercedes Ruehl 
 and Alec Baldwin.</h1>
