--- a/eftoot.html
+++ b/eftoot.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - Tootsie</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley's role in 'Tootsie' and her appearance in the film.">
+    <meta name="keywords" content="Ellen Foley, Tootsie, Dustin Hoffman, Jessica Lange, Jacqui">
+    <title>Ellen Foley Information - Tootsie</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>"Tootsie", featuring Ellen Foley...</h1>
 oh! and Dustin Hoffman and Jessica Lange.
