update html compliance

--- a/efalbum.html
+++ b/efalbum.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - Album details</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Detailed album information for Ellen Foley.">
+    <meta name="keywords" content="Ellen Foley, album, music, Nightout, Another Breath, The Clash, Meat Loaf">
+    <title>Ellen Foley Information - Album Details</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>Ellen Foley detailed album info.</h1><p><h3>
 <img WIDTH=239 HEIGHT=74 SRC="pics/title2.gif" ALT="Get set for a big">
