--- a/efflmtv.html
+++ b/efflmtv.html
@@ -1,7 +1,12 @@
-<HTML>
-<title>
-Ellen Foley Information - Film and TV.
-</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley's appearances in various films and TV shows.">
+    <meta name="keywords" content="Ellen Foley, film, TV, Married to the Mob, Cocktail, Fatal Attraction">
+    <title>Ellen Foley Information - Film and TV</title>
+</head>
 
 <BODY BGCOLOR=#E0E0FF>
 
