--- a/myworks/myenvironment.html
+++ b/myworks/myenvironment.html
@@ -7,7 +7,7 @@
     <meta name="description" content="rainfall data, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
     <meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
     <meta name="author" content="Foley Matthews">
-    <title>Foley Matthews Information - "My Rainfall." Data | Sustainability in Ipswich, Queensland, Australia</title>
+    <title>Foley Matthews Information - "My Rainfall." Data | Ipswich, Australia</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
