--- a/efcdbio.html
+++ b/efcdbio.html
@@ -15,7 +15,7 @@
 The Ellen Foley CD "The Very Best Of" comes with full length biography. (This is translated from the <A HREF="gefcdbio.html">German</A> text.)<P>
 <BR>
 
-<B>Ellen Foley biography.</B><P>
+<h1><B>Ellen Foley biography.</B><P></h1>
 
 Ellen Foley, who was born in St Louis, made her living as a background singer in the New York sound studios for years, before in 1977 Jim Steinman selected her for Meat Loaf's first LP "Bat Out Of Hell" to be the duet partner of the "heavy weight" sound-acrobat. The duet from the song "Paradise By The Dashboard Light" made the tiny singer a star overnight. The "Rolling Stone" paid tribute to her voice by saying "She is the most promising voice of rock this year". With her first album "NIGHTOUT" she proved the pop gazette to be right. The 1979 released album brought her hits like "What's A Matter Baby" and "We Belong To The Night" - all her other titles also showed the musical taste of the blonde lady. Compositions from Jagger/Richards ("Stupid Girl") and Graham Parker (Thunder And Rain") completed the masterpiece produced by Ian Hunter and Mick Ronson.<P>
 
