--- a/efcdbio.html
+++ b/efcdbio.html
@@ -12,7 +12,7 @@
 
 
 <P><BR>
-The Ellen Foley CD "The Very Best Of" comes with full length biography. (This is translated from the <A HREF="gefcdbio.html">German</A> text.)<P>
+The Ellen Foley CD "The Very Best Of" comes with full length biography. (This is translated from the <A HREF="gefcdbio.html">German</A> text.)
 <BR>
 
 <h1><B>Ellen Foley biography.</B><P></h1>
