--- a/efab.html
+++ b/efab.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - Another Breath</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley's 'Another Breath' album information, songwriters, and links to lyrics">
+    <meta name="keywords" content="Ellen Foley, Another Breath, songwriters, lyrics, album">
+    <title>Ellen Foley Information - Another Breath</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>Ellen Foley's "Another Breath"</h1><p>
 
