--- a/efdisc.html
+++ b/efdisc.html
@@ -1,6 +1,13 @@
-<HTML>
-<TITLE>Ellen Foley Information - Discography</TITLE>
- <BODY BGCOLOR=#E0E0FF>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley Discography - Albums, Singles, Compilations, and more.">
+    <meta name="keywords" content="Ellen Foley, discography, albums, singles, guest appearances">
+    <title>Ellen Foley Information - Discography</title>
+</head>
+<BODY BGCOLOR=#E0E0FF>
 
 <CENTER><H1>Ellen Foley Discography</H1><P>
 by  <B>Sven Gusevik.</B><BR>
