--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<HTML>
-<HEAD>
-<html lang = “en”>
-<TITLE>Ellen Foley Information</TITLE>
-<BASE TARGET="_top">
-
-<meta name="description" content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career 
-Information">
-<meta name=keywords content="Ellen Foley, music, records, albums, discography, cd, filmography, 
-movies, films, television, theatre, stage, musicals, career, credits, biography">
-
-</HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career Information">
+    <meta name="keywords" content="Ellen Foley, music, records, albums, discography, cd, filmography, movies, films, television, theatre, stage, musicals, career, credits, biography">
+    <title>Ellen Foley Information</title>
+    <base target="_top">
+</head>
    <FRAMESET COLS="145,*" FRAMEBORDER=YES BORDER=5 FRAMESPACING=0>
        <FRAME  SRC="menu.html" NAME="MENU" SCROLLING="auto">
        <FRAME  SRC="index2.html" NAME="MAIN" SCROLLING="auto">
