--- a/ncep016.html
+++ b/ncep016.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - Night Court ep 016 "Billie And The Cat"</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Night Court featuring Ellen Foley, episode 016 'Billie And The Cat'">
+    <meta name="keywords" content="Night Court, Ellen Foley, episode, Billie, The Cat, 1984">
+    <title>Ellen Foley Information - Night Court ep 016 'Billie And The Cat'</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>Night Court featuring Ellen Foley, <br>episode 016 "Billie And The Cat"</h1>
 </center>
@@ -133,7 +140,7 @@ Bye... <TD>. <TD>. <TD>. <TD>. <TR>
 
 Go back to the start of <a href="index2.html">Ellen Foley Information.</a>
 
-</BODY
+</BODY>
 </HTML>
 
 
