--- a/ncep017.html
+++ b/ncep017.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - Night Court ep 017 "Pick A Number"</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Night Court featuring Ellen Foley, episode 017 'Pick A Number'">
+    <meta name="keywords" content="Night Court, Ellen Foley, episode, Pick A Number, 1984">
+    <title>Ellen Foley Information - Night Court ep 017 'Pick A Number'</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>Night Court featuring Ellen Foley, <br>episode 017 "Pick A Number"</h1>
 </center>
@@ -143,7 +150,7 @@ If Dan thinks he can put his hand there...
 
 Go back to the start of <a href="index2.html">Ellen Foley Information.</a>
 
-</BODY
+</BODY>
 </HTML>
 
 
