--- a/feedback.html
+++ b/feedback.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Ellen Foley Information - Feedback.</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Feedback for Ellen Foley Information page.">
+    <meta name="keywords" content="Ellen Foley, Feedback, Email">
+    <title>Ellen Foley Information - Feedback</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>Ellen Foley Feedback.</h1><p></center>
 
