--- a/myworks/feedback2.html
+++ b/myworks/feedback2.html
@@ -1,5 +1,12 @@
-<HTML>
-<title>Foley Matthews Information - Feedback.</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Feedback for Foley Matthews Information page.">
+    <meta name="keywords" content="Foley Matthews, Feedback, Email">
+    <title>Foley Matthews Information - Feedback</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>Foley Matthews Feedback.</h1><p></center>
 
