--- a/myworks/items.html
+++ b/myworks/items.html
@@ -1,7 +1,14 @@
-<html>
-<head><title>Items for sale or auction</title></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Items for sale or auction on eBay">
+    <meta name="keywords" content="items for sale, auction, ebay, Scott Bacula vinyl, Margaret Urlich poster">
+    <title>Items for Sale or Auction</title>
+</head>
 <body>
-Please submit the following if you want me to put the items on ebay. <p>
+<h1>Please submit the following if you want me to put the items on ebay. <p></h1>
 I will then email you when the auction has commenced.<p>
 
 item #1 scott Bacula vinyl record <p>
