--- a/index2.html
+++ b/index2.html
@@ -1,15 +1,12 @@
-
-
-<HTML>
-<HEAD>
-<TITLE>Ellen Foley Archived</TITLE>
-
-<meta name="description" content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career 
-Information">
-<meta name=keywords content="Ellen Foley, music, records, albums, discography, cd, filmography, 
-movies, films, television, theatre, stage, musicals, career, credits, biography">
-
-</HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career Information">
+    <meta name="keywords" content="Ellen Foley, music, records, albums, discography, cd, filmography, movies, films, television, theatre, stage, musicals, career, credits, biography">
+    <title>Ellen Foley Archived</title>
+</head>
 
 <BODY BACKGROUND="pics/bg.gif">
 
@@ -96,48 +93,4 @@ profit presentation, please report any errors or omissions to the author.
 
 </BODY>
 </HTML>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
