--- a/myworks/wpeo.html
+++ b/myworks/wpeo.html
@@ -1,11 +1,14 @@
-<HTML>
-<HEAD>
-<title>Foley Matthews Information - "We Protect Each Other."</title>
+<!DOCTYPE html>
+<html lang="en">
 
-<meta name=description content="post war, terror, terrorism, freedom, safety, peace">
-<meta name=keywords content="post war, terror, terrorism, freedom, safety, peace">
-
-</HEAD>
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="post war, terror, terrorism, freedom, safety, peace">
+  <meta name="keywords" content="post war, terror, terrorism, freedom, safety, peace">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Foley Matthews Information - "We Protect Each Other."</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>Foley Matthews Information,<br>
 "We Protect Each Other."</h1>
@@ -87,26 +90,4 @@ All Rights Reserved <p>
 
 </BODY>
 </HTML>	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
