--- a/efmibw.html
+++ b/efmibw.html
@@ -1,5 +1,13 @@
-<HTML>
-<title>Ellen Foley Information - Murder in Black and White</title>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Murder in Black and White featuring Ellen Foley and an all-star cast.">
+    <meta name="keywords" content="Murder in Black and White, Ellen Foley, Richard Crenna, Diahann Carroll, telemovie, crime, drama">
+    <title>Ellen Foley Information - Murder in Black and White</title>
+</head>
 <BODY BGCOLOR=#E0E0FF>
 <center><h1>"Murder in Black and <font color=#FFFFFF>White</font><font color=#000000>",<BR>featuring Ellen Foley...</font></h1>
 also starring Richard Crenna, Diahann Carroll, Cliff Gorman, Philip Bosco, Sam Cappola, Caroline Kava, James McDaniel, Ken Welsh, Keith David, Paul Sparer, Richard Russell Ramos, Joan Copeland, Wanakee Legardy, Fred Gwynne.</center><P>
