--- a/efstage.html
+++ b/efstage.html
@@ -1,12 +1,12 @@
-<HTML>
-<HEAD>
-<TITLE>Ellen Foley Information</TITLE>
+<!DOCTYPE html>
+<html lang="en">
 
-<meta name=description content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career 
-Information">
-<meta name=keywords content="Ellen Foley, music, records, albums, discography, cd, filmography, 
-movies, films, television, theatre, stage, musicals, career, credits, biography">
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career Information">
+    <meta name="keywords" content="Ellen Foley, music, records, albums, discography, cd, filmography, movies, films, television, theatre, stage, musicals, career, credits, biography">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ellen Foley Information</title>
 </HEAD>
 
 <BODY BACKGROUND="pics/bg.gif">
@@ -29,34 +29,4 @@ Go back to the start of <a href="index2.html">Ellen Foley Information.</a>
 
 </BODY>
 </HTML>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
