--- a/efflmtv.html
+++ b/efflmtv.html
@@ -32,7 +32,7 @@ Please click on the title to obtain detailed information.</center>
 <li>"Law & Order" (TV Series) (Black, White and Blue) 2000
 <li>"Random Hearts" 1999
 <li>"Ghostwriter" (TV Series) 1992-1993
-<li>The tele-movie "Murder in Black and White" 1990.
+<li>The tele-movie <a href="efmibw.html">"Murder in Black and White"</a> 1990.
 <li><a href="efmtm.html">"Married to the Mob"</a> 1988, along side Michelle Pfeiffer, Dean Stockwell and Mercedes Ruehl.
 <li><a href="efctl.html">"Cocktail"</a> 1988, along side Tom Cruise, Bryan Brown and Elizabeth Shue.
 <li><a href="effa.html">"Fatal Attraction"</a> 1987, with Michael Douglas and Anne Archer.
