--- a/index2.html
+++ b/index2.html
@@ -58,6 +58,7 @@ Please click on these for...
 <li><a href="efdisc.html">Ellen's discography. </a> <BR>
 <li>Detailed <a href="efalbum.html">album</a> information. <BR>
 <li><a href="efpic.html">Ellen pictures.</a> loads a page of postage stamp size pictures first. <BR>
+<li><a href="efstage.html">Ellen on the Theatre Stage.</a> <BR>
 <li><a href="efflmtv.html">Ellen's film and TV-ography.</a> <BR>
 <li>Ellen Foley <a href="biointro.html">Biographical</a> information. <BR>
 <li><!--img WIDTH=43 HEIGHT=15 align="top" SRC="pics/new.gif" ALT="NEW"//-->
